--- a/Importing-Libraries.ipynb
+++ b/Importing-Libraries.ipynb
@@ -2,110 +2,69 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c24a7a2e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# 1. pandas \n",
+    "# 1. Pandas : 데이터를 표(DataFrame) 형태로 다루기 위한 라이브러리\n",
     "import pandas as pd \n",
+    "\n",
+    "# 2. Numpy : 숫자, 배열, 행렬 계산을 위한 라이브러리\n",
     "import numpy as np \n",
+    "\n",
+    "# 3. Matplotlib : 데이터 시각화 라이브러리\n",
     "import matplotlib.pyplot as plt \n",
+    "\n",
+    "# 4. Seaborn : 통계적 데이터 시각화 라이브러리\n",
     "import seaborn as sns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "104680d5",
+   "execution_count": 2,
+   "id": "0dd48fbf",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Review</th>\n",
-       "      <th>Label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>배공빠르고 굿</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>택배가 엉망이네용 저희집 밑에층에 말도없이 놔두고가고</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>아주좋아요 바지 정말 좋아서2개 더 구매했어요 이가격에 대박입니다. 바느질이 조금 ...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>선물용으로 빨리 받아서 전달했어야 하는 상품이었는데 머그컵만 와서 당황했습니다. 전...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>민트색상 예뻐요. 옆 손잡이는 거는 용도로도 사용되네요 ㅎㅎ</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                              Review  Label\n",
-       "0                                            배공빠르고 굿      0\n",
-       "1                      택배가 엉망이네용 저희집 밑에층에 말도없이 놔두고가고      1\n",
-       "2  아주좋아요 바지 정말 좋아서2개 더 구매했어요 이가격에 대박입니다. 바느질이 조금 ...      0\n",
-       "3  선물용으로 빨리 받아서 전달했어야 하는 상품이었는데 머그컵만 와서 당황했습니다. 전...      1\n",
-       "4                  민트색상 예뻐요. 옆 손잡이는 거는 용도로도 사용되네요 ㅎㅎ      0"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = pd.read_csv(\"Naver_review.csv\")\n",
-    "df.head()"
+    "# [예상문제 1]\n",
+    "# 데이터 시각화 라이브러리인 seaborn을 sns라는 별칭(alias)으로 불러오는 코드를 작성하세요.\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f0a9c73",
+   "metadata": {},
+   "source": [
+    "# [예상문제 2]\n",
+    "숫자 계산 및 배열 처리를 위한 라이브러리인 numpy를 np라는 별칭(alias)으로 불러오는 코드를 작성하세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4a324408",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# [예상문제 2]\n",
+    "# 숫자 계산 및 배열 처리를 위한 라이브러리인 numpy를 np라는 별칭(alias)으로 불러오는 코드를 작성하세요.\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad94c0aa",
+   "metadata": {},
+   "source": [
+    "sss"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0dd48fbf",
+   "id": "9b0ef347",
    "metadata": {},
    "outputs": [],
    "source": []
