--- a/Importing-Libraries.ipynb
+++ b/Importing-Libraries.ipynb
@@ -7,14 +7,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 필요한 라이브러리 임포트\n",
+    "\n",
     "# 1. Pandas : 데이터를 표(DataFrame) 형태로 다루기 위한 라이브러리\n",
-    "import pandas as pd \n",
+    "import pandas as pd\n",
     "\n",
     "# 2. Numpy : 숫자, 배열, 행렬 계산을 위한 라이브러리\n",
-    "import numpy as np \n",
+    "import numpy as np\n",
     "\n",
     "# 3. Matplotlib : 데이터 시각화 라이브러리\n",
-    "import matplotlib.pyplot as plt \n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "# 4. Seaborn : 통계적 데이터 시각화 라이브러리\n",
     "import seaborn as sns"
@@ -22,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0dd48fbf",
    "metadata": {},
    "outputs": [],
@@ -33,17 +35,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "2f0a9c73",
-   "metadata": {},
-   "source": [
-    "# [예상문제 2]\n",
-    "숫자 계산 및 배열 처리를 위한 라이브러리인 numpy를 np라는 별칭(alias)으로 불러오는 코드를 작성하세요."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "4a324408",
    "metadata": {},
    "outputs": [],
@@ -54,20 +47,27 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ad94c0aa",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ed24223",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "sss"
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9b0ef347",
+   "execution_count": 4,
+   "id": "4585eb95",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import (\n",
+    "    accuracy_score, precision_score, recall_score, f1_score,\n",
+    "    confusion_matrix, classification_report, roc_auc_score\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
