settings-in-desktop

--- a/code/(1)Importing-Libraries.ipynb
+++ b/code/(1)Importing-Libraries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c24a7a2e",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,9 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# 4. Seaborn : 통계적 데이터 시각화 라이브러리\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score"
    ]
   },
   {
@@ -68,6 +70,14 @@
     "    confusion_matrix, classification_report, roc_auc_score\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1f98f3a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
