feat : update 01_Importing_Libraries content

--- a/code/01_Importing-Libraries.ipynb
+++ b/code/01_Importing-Libraries.ipynb
@@ -77,6 +77,47 @@
    "id": "a1f98f3a",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# 데이터 분석 현장에서 자주 쓰는 \"from-import\" 컬렉션\n",
+    "# sklearn : 데이터 분리/스케일/모델/파이프라인/교차검증\n",
+    "from sklearn.model_selection import train_test_split, KFold, cross_val_score\n",
+    "from sklearn.preprocessing import StandardScaler, RobustScaler, MinMaxScaler\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.metrics import (\n",
+    "    accuracy_score, precision_score, recall_score, f1_score, roc_auc_score, \n",
+    "    confusion_matrix, classification_report\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "71996a36",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'imblearn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# imbalanced-learn : 불균형 데이터 샘플링\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mimblearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mover_sampling\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m SMOTE\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'imblearn'"
+     ]
+    }
+   ],
+   "source": [
+    "# imbalanced-learn : 불균형 데이터 샘플링\n",
+    "from imblearn.over_sampling import SMOTE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "190f9114",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
