--- a/code/01_Importing-Libraries.ipynb
+++ b/code/01_Importing-Libraries.ipynb
@@ -94,19 +94,7 @@
    "execution_count": 1,
    "id": "71996a36",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'imblearn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# imbalanced-learn : 불균형 데이터 샘플링\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mimblearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mover_sampling\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m SMOTE\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'imblearn'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# imbalanced-learn : 불균형 데이터 샘플링\n",
     "from imblearn.over_sampling import SMOTE"
@@ -118,7 +106,11 @@
    "id": "190f9114",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# xgboost / lightgbm\n",
+    "from xgboost import XGBClassifier\n",
+    "from lightgbm import LGBMClassifier"
+   ]
   }
  ],
  "metadata": {
