Feat : 데이터 불러오기 예제

--- a/code/01_Importing-Libraries.ipynb
+++ b/code/01_Importing-Libraries.ipynb
@@ -84,7 +84,7 @@
     "from sklearn.preprocessing import StandardScaler, RobustScaler, MinMaxScaler\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.metrics import (\n",
-    "    accuracy_score, precision_score, recall_score, f1_score, roc_auc_score, \n",
+    "    accuracy_score, precision_score, recall_score, f1_score, roc_auc_score,\n",
     "    confusion_matrix, classification_report\n",
     ")"
    ]
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "190f9114",
    "metadata": {},
    "outputs": [],
@@ -110,6 +110,18 @@
     "# xgboost / lightgbm\n",
     "from xgboost import XGBClassifier\n",
     "from lightgbm import LGBMClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b74a2e06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# statsmodels: 회귀/가설 검정 (공식식 API)\n",
+    "from statsmodels.formula.api import ols\n",
+    "from scipy.stats import ttest_ind, chi2_contingency"
    ]
   }
  ],
