--- a/code/02_Loading-Data.ipynb
+++ b/code/02_Loading-Data.ipynb
@@ -205,10 +205,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "21deccd8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tenure_months</th>\n",
+       "      <th>contract_type</th>\n",
+       "      <th>payment_method</th>\n",
+       "      <th>internet_service</th>\n",
+       "      <th>monthly_charge</th>\n",
+       "      <th>total_charges</th>\n",
+       "      <th>data_usage_gb</th>\n",
+       "      <th>support_calls</th>\n",
+       "      <th>addon_services</th>\n",
+       "      <th>churn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>32.0</td>\n",
+       "      <td>2년</td>\n",
+       "      <td>신용카드</td>\n",
+       "      <td>기가</td>\n",
+       "      <td>124253.0</td>\n",
+       "      <td>4355946.0</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>45.0</td>\n",
+       "      <td>무약정</td>\n",
+       "      <td>지류</td>\n",
+       "      <td>광랜</td>\n",
+       "      <td>35326.0</td>\n",
+       "      <td>1372634.0</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>40.0</td>\n",
+       "      <td>무약정</td>\n",
+       "      <td>지류</td>\n",
+       "      <td>기가</td>\n",
+       "      <td>128300.0</td>\n",
+       "      <td>5179948.0</td>\n",
+       "      <td>371.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>59.0</td>\n",
+       "      <td>2년</td>\n",
+       "      <td>신용카드</td>\n",
+       "      <td>광랜</td>\n",
+       "      <td>20723.0</td>\n",
+       "      <td>1242669.0</td>\n",
+       "      <td>158.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>46.0</td>\n",
+       "      <td>1년</td>\n",
+       "      <td>신용카드</td>\n",
+       "      <td>기가</td>\n",
+       "      <td>89569.0</td>\n",
+       "      <td>3572681.0</td>\n",
+       "      <td>371.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   tenure_months contract_type payment_method internet_service  \\\n",
+       "0           32.0            2년           신용카드               기가   \n",
+       "1           45.0           무약정             지류               광랜   \n",
+       "2           40.0           무약정             지류               기가   \n",
+       "3           59.0            2년           신용카드               광랜   \n",
+       "4           46.0            1년           신용카드               기가   \n",
+       "\n",
+       "   monthly_charge  total_charges  data_usage_gb  support_calls  \\\n",
+       "0        124253.0      4355946.0          123.0            0.0   \n",
+       "1         35326.0      1372634.0          125.0            0.0   \n",
+       "2        128300.0      5179948.0          371.0            7.0   \n",
+       "3         20723.0      1242669.0          158.0            5.0   \n",
+       "4         89569.0      3572681.0          371.0            3.0   \n",
+       "\n",
+       "   addon_services  churn  \n",
+       "0             0.0      0  \n",
+       "1             5.0      0  \n",
+       "2             0.0      1  \n",
+       "3             3.0      0  \n",
+       "4             4.0      0  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.read_csv(\"data/8_customer_churn.csv\", encoding='utf-8')\n",
     "df.head(5)"
@@ -217,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbc7aca6",
+   "id": "912a83ad",
    "metadata": {},
    "outputs": [],
    "source": []
