feat : solve problems (4-10)

--- a/test/02_test.ipynb
+++ b/test/02_test.ipynb
@@ -1379,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "b2d9203b",
    "metadata": {},
    "outputs": [
@@ -1636,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "df6dd02f",
    "metadata": {},
    "outputs": [],
@@ -2088,7 +2088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "id": "831af2e8",
    "metadata": {},
    "outputs": [
@@ -2096,58 +2096,110 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "============================================================\n",
-      "검증 결과 (Validation Result)\n",
-      "============================================================\n",
-      "Validation MAE (평균 절대 오차): 1.4322\n",
-      "✓ MAE가 작을수록 모델 성능이 좋습니다!\n",
-      "============================================================\n"
+      "Validation MAE: 1.4322\n"
      ]
     }
    ],
    "source": [
     "# 검증\n",
     "\n",
-    "# ---- 평가 모드 설정 ----\n",
-    "model.eval()  # 모델을 평가 모드로 (Dropout, BatchNorm 비활성화)\n",
-    "valid_loss = 0  # 검증 손실 누적값 (0으로 초기화)\n",
+    "model.eval()  \n",
+    "valid_loss = 0  \n",
     "\n",
-    "# ---- 그래디언트 계산 안 함 (메모리 절약) ----\n",
-    "# 검증 중에는 가중치를 업데이트하지 않으므로 그래디언트 불필요\n",
     "with torch.no_grad():\n",
-    "    # 검증 데이터로 배치 단위 평가\n",
     "    for batch_idx, samples in enumerate(valid_dataloader):\n",
     "        xb, yb = samples\n",
-    "        # 데이터를 GPU/CPU로 옮김\n",
     "        xb, yb = xb.to(device), yb.to(device)\n",
     "\n",
-    "        # ---- 순전파만 수행 ----\n",
-    "        # (역전파는 하지 않음)\n",
     "        pred = model(xb)\n",
     "        \n",
-    "        # ---- 검증 손실 계산 ----\n",
     "        valid_loss += criterion(pred, yb).item() * xb.size(0)\n",
     "\n",
-    "# ---- 검증 평균 손실 계산 ----\n",
     "valid_loss /= len(valid_dataloader.dataset)\n",
     "\n",
-    "# ---- 검증 결과 출력 ----\n",
-    "print(f\"\\n{'='*60}\")\n",
-    "print(f\"검증 결과 (Validation Result)\")\n",
-    "print(f\"{'='*60}\")\n",
-    "print(f\"Validation MAE (평균 절대 오차): {valid_loss:.4f}\")\n",
-    "print(f\"✓ MAE가 작을수록 모델 성능이 좋습니다!\")\n",
-    "print(f\"{'='*60}\")"
+    "print(f\"Validation MAE: {valid_loss:.4f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "id": "763c12e5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 문제14 : 최종적으로 완성된 딥러닝 모델을 사용하여, 아래와 같은 새로운 부동산 데이터가 들어왔을 때의 가격을 예측하려고 합니다. 주어진 시뮬레이터 데이터를 scaler사용해 변환, 딥러닝 모델로 가격예측"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "748da9dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_estate_data = np.array([[0, 120.0, 3.0, 2.0, 10.0, 1, 2.0, 2.0, 8.0, 9.0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "a11f7e54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/myvenv/lib/python3.10/site-packages/sklearn/base.py:465: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/myvenv/lib/python3.10/site-packages/sklearn/base.py:465: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.16495765, -0.08084733, -0.00365476,  0.00627468, -0.85289668,\n",
+       "        -1.05894809,  0.40699641,  0.49571136,  0.2618167 ,  1.24354878]])"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_estate_data_scaled = scaler.transform(new_estate_data)\n",
+    "new_estate_data_scaled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "d9a0d0e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 78ms/step\n",
+      "가격 : -1.16\n",
+      "1/1 [==============================] - 0s 78ms/step\n",
+      "가격 : -1.16\n"
+     ]
+    }
+   ],
+   "source": [
+    "predicted_price = model_dl.predict(new_estate_data_scaled)\n",
+    "print(f\"가격 : {new_estate_data_scaled[0][0]:.2f}\")"
+   ]
   }
  ],
  "metadata": {
